--- a/.env.parametrosDB
+++ b/.env.parametrosDB
@@ -5,16 +5,16 @@ MSSQL_USER=sa
 MSSQL_PASS=12345678
 MSSQL_SERVER=localhost
 MSSQL_INSTANCE=SQLEXPRESS #de ser necesrio se ocupa y se descomentarea de db.ts
-MSSQL_DB=SAP_DB
+MSSQL_DB=dbcualquier
 MSSQL_ENCRYPT=false
 MSSQL_TRUSTCERT=false
 
 #JWT
-JWT_SECRET=24a77392869656e3dc95eeabd44d2235
+JWT_SECRET=123
 JWT_ISSUER=ApiInventarioSAP
 JWT_AUDIENCE=ProveedorExterno
 TOKEN_EXPIRES_IN=1h
 # Lista de clientes autorizados
 
 #Aplicación inventario bodega
-AUTH_CLIENTS_JSON=[{"id":"origencorp","secret":"Lx82vY3ZP8sEXmtnaXbt0GOEn5QJKO","scopes":["inventario:read"]}]
+AUTH_CLIENTS_JSON=[{"id":"pepe","secret":"1","scopes":["inventario:read"]}]
